--- a/town-container-android/res/layout/facebook_checkin.xml
+++ b/town-container-android/res/layout/facebook_checkin.xml
@@ -9,12 +9,10 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/search_top"           
+        android:layout_height="wrap_content"                
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
         android:orientation="vertical">
             
         <TextView
@@ -22,6 +20,7 @@
             android:layout_height="wrap_content"
             android:textColor="#555555" 
             android:textStyle="bold"
+            android:textSize="@dimen/text_size_medium"            
             android:layout_marginLeft="5dp"                    
             android:text="@string/update_your_status"/> 
 
@@ -36,7 +35,7 @@
                 android:layout_height="40dp"
                 android:paddingTop="1dp"
                 android:paddingRight="11dp"
-                android:layout_weight=".85">
+                android:layout_weight=".80">
 
                 <EditText
                     android:id="@+id/facebook_status"
@@ -45,11 +44,12 @@
                     android:background="@drawable/search_bar"
                     android:hint="@string/empty"
                     android:singleLine="true"
-                    android:textColor="#CB0000"
-                    android:textStyle="bold" 
+                    android:textColor="#FF0000"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_size_medium"
                     android:includeFontPadding="true"
-                    android:paddingRight="35dp"
-                    android:paddingLeft="35dp" 
+                    android:paddingRight="5dp"
+                    android:paddingLeft="7dp" 
                     android:text="@string/whats_on_your_mind"/>
                     
             </FrameLayout>
@@ -57,12 +57,12 @@
             <FrameLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"                                        
-                android:layout_weight=".15">
+                android:layout_weight=".20">
                   
               <ImageButton
                   android:id="@+id/facebook_status_post"
-                  android:layout_width="40dip"
-                  android:layout_height="40dip"
+                  android:layout_width="wrap_content"
+                  android:layout_height="36dip"
                   android:layout_gravity="top|center_horizontal"
                   android:background="@drawable/post_button"                
                   android:contentDescription="@string/empty" />
@@ -80,6 +80,8 @@
             android:src="@drawable/search_friends"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
             android:contentDescription="@string/empty"/>
         
        <EditText
@@ -90,8 +92,12 @@
             android:hint="@string/empty"
             android:singleLine="true"
             android:textColor="@android:color/white"
-            android:textStyle="bold" 
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_medium" 
             android:includeFontPadding="true"
+            android:layout_gravity="center"
+            android:paddingRight="5dp"
+            android:paddingLeft="7dp"
             android:text="@string/search_for_friends"/>        
         
     </LinearLayout>    
