--- a/town-container-android/res/values/dimens.xml
+++ b/town-container-android/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="text_size_medium">16sp</dimen>
     <dimen name="text_size_large">18sp</dimen>
     <dimen name="text_size_xlarge">20sp</dimen>
+    <dimen name="text_size_xlarger">22sp</dimen>
     <dimen name="text_size_xxlarge">26sp</dimen>
     <dimen name="list_item_places_height">75dip</dimen>
 </resources>
